# rust-axum-api

./: Cargo.toml  LICENSE  private.pem  public.pem
src/: controller.rs  crypto.rs  file_manager.rs  main.rs
src/controller/: mod.rs  types.rs
tests/: integration.rs
