[package]
name = "rust-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["macros", "multipart"] }
axum_typed_multipart = "0.5"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
httpc-test = "0.1"
